--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,4 @@
-# Files in the config/locales directory are used for internationalization
+  # Files in the config/locales directory are used for internationalization
 # and are automatically loaded by Rails. If you want to use locales other
 # than English, add the necessary files in this directory.
 #
@@ -30,4 +30,18 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  admin_users:
+    sessions:
+    new:
+      email_address: "Email address"
+
+  layouts:
+    navigtation:
+      log_out: "Logout"
+
+    application:
+      du_an: DuAn
+
+    devise:
+      du_an: DuAn
+
